// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsxFactory should create correct Prop element 1`] = `
Object {
  "actualValue": "actual value",
  "comparator": "=",
  "contentType": "inline",
  "expectedValue": Array [
    Object {
      "type": "text",
      "value": "expected value",
    },
  ],
  "name": Array [
    Object {
      "type": "text",
      "value": "prop name",
    },
  ],
  "status": "success",
  "type": "prop",
}
`;

exports[`jsxFactory should create correct Prop element 2`] = `
Object {
  "comparator": undefined,
  "contentType": "block",
  "expectedValue": Object {
    "language": "javascript",
    "type": "code-block",
    "value": "expected value",
  },
  "name": Array [
    Object {
      "type": "text",
      "value": "prop name",
    },
  ],
  "status": "fail",
  "type": "prop",
}
`;

exports[`jsxFactory should create correct Props element 1`] = `
Object {
  "children": Array [
    Object {
      "actualValue": undefined,
      "comparator": undefined,
      "contentType": "inline",
      "expectedValue": Array [
        Object {
          "type": "text",
          "value": "test",
        },
      ],
      "name": Array [
        Object {
          "type": "text",
          "value": "test",
        },
      ],
      "status": undefined,
      "type": "prop",
    },
  ],
  "type": "props",
}
`;

exports[`jsxFactory should translate test line result line correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Some title",
        },
      ],
      "type": "test-line",
    },
  ],
  "message": Array [
    Object {
      "type": "text",
      "value": "Some text",
    },
  ],
  "screenshot": undefined,
  "status": "fail",
  "type": "test-line-result",
}
`;

exports[`jsxFactory should translate test line result line correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Some title",
        },
      ],
      "type": "test-line",
    },
  ],
  "message": Array [
    Object {
      "type": "text",
      "value": "Some text",
    },
  ],
  "screenshot": "some/path/to/screenshot.png",
  "status": "fail",
  "type": "test-line-result",
}
`;
